# simutrador-core

./: .gitignore  README.md  STATUS.md  pyproject.toml  pyrightconfig.json
scripts/: demo_ws_client.py  install_hooks.py  publish.sh
scripts/deployment/: publish.sh
src/simutrador_core/: __init__.py
src/simutrador_core/models/: __init__.py  asset_types.py  enums.py  orders.py  price_data.py  trading_state.py  websocket.py
src/simutrador_core/utils/: __init__.py  logging_utils.py  timeframe_utils.py
