[project]
name = "simutrador-core"
version = "1.0.0"
description = "Core models and utilities for SimuTrador trading simulation platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SimuTrador Team", email = "dev@simutrador.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.11.5",
    "pandas>=2.3.0",
]
keywords = ["trading", "simulation", "finance", "backtesting", "models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/simutrador/simutrador-core"
Documentation = "https://docs.simutrador.com/core"
Repository = "https://github.com/simutrador/simutrador-core"
Issues = "https://github.com/simutrador/simutrador-core/issues"
Changelog = "https://github.com/simutrador/simutrador-core/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simutrador_core"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "pyright>=1.1.0",
    "pandas-stubs>=2.3.0.250703",
]

# Ruff configuration (same as backend)
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]
exclude = ["__pycache__", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["simutrador_core"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
